--- a/src/styles/About.module.css
+++ b/src/styles/About.module.css
@@ -1,120 +1,450 @@
-.about {
-  display: flex;
-  width: 100%;
-  flex-direction: row;
-  justify-content: space-between;
-  margin-top: 25px;
-}
-.imageContainer {
-  margin-top: 50px;
-  margin-bottom: 75px;
-}
-.spacer {
-  width: 100%;
-  flex-grow: 1;
-  flex-basis: 0%;
-}
-.view {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  margin: auto;
-  margin-top: 50px;
-  width: 70%;
-}
-.title {
-  flex-grow: 2;
-  flex-basis: 0%;
-  width: 100%;
-  align-items: end;
-  text-align: right;
-}
-.divider {
-  width: 72.7%;
-  text-align: right;
-  height: 1px;
-  background-color: black;
+@media only screen and (min-width: 800px) {
+  .about {
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: 25px;
+  }
+  .imageContainer {
+    margin-top: 50px;
+    margin-bottom: 75px;
+  }
+  .spacer {
+    width: 100%;
+    flex-grow: 1;
+    flex-basis: 0%;
+  }
+  .view {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+    margin-top: 50px;
+    width: 70%;
+  }
+  .title {
+    flex-grow: 2;
+    flex-basis: 0%;
+    width: 100%;
+    align-items: end;
+    text-align: right;
+  }
+  .divider {
+    width: 72.7%;
+    text-align: right;
+    height: 1px;
+    background-color: black;
 
-  margin-bottom: 25px;
-}
-.dividerContainer {
-  display: flex;
-  flex-direction: row-reverse;
-}
-.sectionContainer {
-  margin-bottom: 50px;
-}
-.pic {
-  max-width: 100%;
-  height: auto;
+    margin-bottom: 25px;
+  }
+  .dividerContainer {
+    display: flex;
+    flex-direction: row-reverse;
+  }
+  .sectionContainer {
+    margin-bottom: 50px;
+  }
+  .pic {
+    max-width: 100%;
+    height: auto;
+  }
+  .rectangleContainer {
+    display: inline-block;
+    position: relative;
+    margin-top: 70px;
+    margin-bottom: 40px;
+    /* padding: 10%;
+  padding-left: 25%;
+  padding-right: 25%; */
+  }
+
+  .rectangleContainer:after {
+    content: "";
+    rotate: 4deg;
+    position: absolute;
+    left: 0;
+    top: 0;
+    background-color: #ebebeb;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+  }
+  .button {
+    font-family: Helvetica Neue, Arial, sans-serif;
+    letter-spacing: 5px;
+    font-weight: bold;
+    font-size: 14px;
+    padding: 20px;
+    width: 200px;
+    border-style: solid;
+    border-color: black;
+    border-width: 2px;
+    margin-top: 15px;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+  }
+  .button1 {
+    font-family: Helvetica Neue, Arial, sans-serif;
+    letter-spacing: 5px;
+    font-weight: bold;
+    font-size: 14px;
+    padding: 20px;
+    width: 200px;
+    border-style: solid;
+    border-color: black;
+    border-width: 2px;
+    margin-top: 15px;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+  }
+
+  .linkContainer {
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+  }
+  .contactTextContainer {
+    background-color: #f8f8f8;
+    padding: 100px;
+    width: 500px;
+    display: flex;
+    flex-direction: column;
+    left: 20%;
+    top: 30%;
+  }
+  .contactText {
+    text-align: center;
+    color: #000;
+    text-align: center;
+    font-family: EB Garamond;
+    font-size: 36px;
+    font-style: italic;
+    font-weight: 400;
+    line-height: normal;
+    margin-bottom: 25px;
+  }
+  .button:hover {
+    background-color: #f2f2f2;
+    border-style: solid;
+    border-color: black;
+  }
+  .button1:hover {
+    background-color: #f2f2f2;
+    border-style: solid;
+    border-color: black;
+  }
+  .button1:hover .buttonText1 {
+    display: none;
+  }
+  .button1:hover:before {
+    content: "KYUHO@UPENN.EDU";
+    color: black;
+  }
 }
 
-.rectangleContainer {
-  display: inline-block;
-  position: relative;
-  margin-top: 70px;
-  margin-bottom: 40px;
-}
+@media only screen and (min-width: 400px) {
+  .about {
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: 15px;
+  }
+  .imageContainer {
+    margin-top: 10px;
+    margin-bottom: 40px;
+  }
+  .spacer {
+    width: 100%;
+    flex-grow: 1;
+    flex-basis: 0%;
+  }
+  .view {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+    margin-top: 30px;
+    width: 90%;
+  }
+  .title {
+    flex-grow: 2;
+    flex-basis: 0%;
+    width: 100%;
+    align-items: end;
+    text-align: right;
+  }
+  p {
+    padding: 0;
+  }
+  .divider {
+    width: 72.7%;
+    text-align: right;
+    height: 1px;
+    background-color: black;
 
-.rectangleContainer:after {
-  content: "";
-  rotate: 4deg;
-  position: absolute;
-  left: 0;
-  top: 0;
-  background-color: #ebebeb;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-}
-.button {
-  font-family: Helvetica Neue, Arial, sans-serif;
-  letter-spacing: 5px;
-  font-weight: bold;
-  font-size: 14px;
-  padding: 20px;
-  width: 200px;
-  border-style: solid;
-  border-color: black;
-  border-width: 2px;
-  margin-top: 15px;
-  display: flex;
-  text-align: center;
-  justify-content: center;
-}
+    margin-bottom: 25px;
+  }
+  .dividerContainer {
+    display: flex;
+    flex-direction: row-reverse;
+  }
+  .sectionContainer {
+    margin-bottom: 50px;
+    width: 100%;
+  }
+  .pic {
+    max-width: 100%;
+    height: auto;
+  }
+  .rectangleContainer {
+    display: inline-block;
+    position: relative;
+    margin-top: 50px;
+    margin-bottom: 40px;
+  }
 
-.linkContainer {
-  display: flex;
-  gap: 20px;
-  justify-content: center;
+  .rectangleContainer:after {
+    content: "";
+    rotate: 4deg;
+    position: absolute;
+    left: 0;
+    top: 0;
+    background-color: #ebebeb;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+  }
+  .button {
+    font-family: Helvetica Neue, Arial, sans-serif;
+    letter-spacing: 5px;
+    font-weight: bold;
+    font-size: 10px;
+    padding: 20px;
+    width: 75px;
+    border-style: solid;
+    border-color: black;
+    border-width: 2px;
+    margin-top: 15px;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+  }
+  .button1 {
+    font-family: Helvetica Neue, Arial, sans-serif;
+    letter-spacing: 5px;
+    font-weight: bold;
+    font-size: 10px;
+    padding: 20px;
+    width: 75px;
+    border-style: solid;
+    border-color: black;
+    border-width: 2px;
+    margin-top: 15px;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+  }
+
+  .linkContainer {
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+  }
+  .contactTextContainer {
+    background-color: #f8f8f8;
+    padding: 75px;
+    width: 200px;
+    display: flex;
+    flex-direction: column;
+    left: 20%;
+    top: 30%;
+  }
+  .contactText {
+    text-align: center;
+    color: #000;
+    text-align: center;
+    font-family: EB Garamond;
+    font-size: 20px;
+    font-style: italic;
+    font-weight: 400;
+    line-height: normal;
+    margin-bottom: 15px;
+  }
+  .button:hover {
+    background-color: #f2f2f2;
+    border-style: solid;
+    border-color: black;
+  }
+  .button1:hover {
+    background-color: #f2f2f2;
+    border-style: solid;
+    border-color: black;
+  }
+  .button1:hover .buttonText1 {
+    display: none;
+  }
+  .button1:hover:before {
+    content: "KYUHO@UPENN.EDU";
+    color: black;
+  }
 }
-.contactTextContainer {
-  position: absolute;
-  display: flex;
-  flex-direction: column;
-  left: 20%;
-  top: 30%;
-}
-.contactText {
-  text-align: center;
-  color: #000;
-  text-align: center;
-  font-family: EB Garamond;
-  font-size: 40px;
-  font-style: italic;
-  font-weight: 400;
-  line-height: normal;
-  margin-bottom: 25px;
-}
-.button:hover {
-  background-color: #f2f2f2;
-  border-style: solid;
-  border-color: black;
-}
-.buttonText {
-  text-align: center;
-}
-a:hover {
-  color: gray;
+@media only screen and (max-width: 400px) {
+  .about {
+    display: flex;
+    width: 100%;
+
+    flex-direction: column;
+    margin-top: 30px;
+  }
+  .imageContainer {
+    margin-top: 10px;
+    margin-bottom: 40px;
+  }
+
+  .view {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+    margin-top: 30px;
+    width: 90%;
+  }
+  .title {
+    flex-grow: 2;
+    flex-basis: 0%;
+    width: 100%;
+    align-items: start;
+    text-align: left;
+  }
+  .spacer {
+    width: 100%;
+    flex-grow: 1;
+    flex-basis: 0%;
+  }
+  .divider {
+    width: 100%;
+    text-align: left;
+    height: 1px;
+    background-color: black;
+  }
+  .dividerContainer {
+    display: flex;
+    flex-direction: row-reverse;
+    margin-top: 30px;
+  }
+  p {
+    padding: 0;
+  }
+
+  .sectionContainer {
+    margin-bottom: 30px;
+    width: 100%;
+  }
+  .pic {
+    max-width: 100%;
+    height: auto;
+  }
+  .rectangleContainer {
+    display: inline-block;
+    position: relative;
+    margin-top: 25px;
+    margin-bottom: 20px;
+    /* padding: 10%;
+      padding-left: 25%;
+      padding-right: 25%; */
+  }
+
+  .rectangleContainer:after {
+    content: "";
+    rotate: 4deg;
+    position: absolute;
+    left: 0;
+    top: 0;
+    background-color: #ebebeb;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+  }
+  .button {
+    font-family: Helvetica Neue, Arial, sans-serif;
+    letter-spacing: 5px;
+    font-weight: bold;
+    font-size: 10px;
+    padding: 10px;
+    width: 150px;
+    border-style: solid;
+    border-color: black;
+    border-width: 2px;
+    margin-top: 15px;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+  }
+  .button1 {
+    font-family: Helvetica Neue, Arial, sans-serif;
+    letter-spacing: 5px;
+    font-weight: bold;
+    font-size: 10px;
+    padding: 10px;
+    width: 150px;
+    border-style: solid;
+    border-color: black;
+    border-width: 2px;
+    margin-top: 15px;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+  }
+
+  .linkContainer {
+    display: flex;
+    flex-direction: column;
+    gap: 0px;
+    justify-content: center;
+    align-items: center;
+  }
+  .contactTextContainer {
+    background-color: #f8f8f8;
+    padding: 50px;
+    width: 200px;
+    display: flex;
+    flex-direction: column;
+    left: 20%;
+    top: 30%;
+  }
+  .contactText {
+    text-align: center;
+    color: #000;
+    text-align: center;
+    font-family: EB Garamond;
+    font-size: 16px;
+    font-style: italic;
+    font-weight: 400;
+    line-height: normal;
+    margin-bottom: 15px;
+  }
+  .button:hover {
+    background-color: #f2f2f2;
+    border-style: solid;
+    border-color: black;
+  }
+  .button1:hover {
+    background-color: #f2f2f2;
+    border-style: solid;
+    border-color: black;
+  }
+  .button1:hover .buttonText1 {
+    display: none;
+  }
+  .button1:hover:before {
+    content: "KYUHO@UPENN.EDU";
+    color: black;
+  }
 }
